{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 19,
  "lineage": "6fdf9a96-92ad-ee40-d3f8-37e2f76aa91d",
  "resources": [
    {
      "module": "module.computer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2vm",
      "provider": "module.computer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52ddcdf3a885741",
            "arn": "arn:aws:ec2:us-east-1:225908212644:instance/i-0ef7e55d9c0788d82",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef7e55d9c0788d82",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "live_keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0fe6573962264014f",
            "private_dns": "ip-10-0-0-169.ec2.internal",
            "private_ip": "10.0.0.169",
            "public_ip": "18.212.219.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce6d8e1727482aca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034d5211bf7eb22aa",
            "tags": {
              "Name": "EC2 Demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07e958e75311591a3",
              "sg-0bf0f53301e2d5437"
            ]
          },
          "dependencies": [
            "module.computer.data.aws_ami.amzlinux2",
            "module.computer.module.network.aws_security_group.vpc-ssh",
            "module.computer.module.network.aws_security_group.web-traffic",
            "module.computer.module.network.aws_subnet.custom_subnet",
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_IP",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0538ccf77ac6fdcbd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-210-39-241.compute-1.amazonaws.com",
            "public_ip": "44.210.39.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Custom Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-TF",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:internet-gateway/igw-0f793629fff89e4e4",
            "id": "igw-0f793629fff89e4e4",
            "owner_id": "225908212644",
            "vpc_id": "vpc-0c167763f1535afa6"
          },
          "dependencies": [
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0538ccf77ac6fdcbd",
            "id": "nat-0ecf06ea49d7bf307",
            "network_interface_id": "eni-0fd1db5b1c9652be7",
            "private_ip": "10.0.0.11",
            "public_ip": "44.210.39.241",
            "subnet_id": "subnet-034d5211bf7eb22aa",
            "tags": {
              "Name": "Custom natgateway"
            }
          },
          "dependencies": [
            "module.computer.module.network.aws_eip.elastic_IP",
            "module.computer.module.network.aws_subnet.custom_subnet",
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_RT",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05eecc50e9632fc43",
            "owner_id": "225908212644",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f793629fff89e4e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Custom RT"
            },
            "vpc_id": "vpc-0c167763f1535afa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.computer.module.network.aws_internet_gateway.IGW-TF",
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom_RT_association",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0306ab164917607bb",
            "route_table_id": "rtb-05eecc50e9632fc43",
            "subnet_id": "subnet-034d5211bf7eb22aa"
          },
          "dependencies": [
            "module.computer.module.network.aws_internet_gateway.IGW-TF",
            "module.computer.module.network.aws_route_table.custom_RT",
            "module.computer.module.network.aws_subnet.custom_subnet",
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:security-group/sg-07e958e75311591a3",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e958e75311591a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "225908212644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c167763f1535afa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-traffic",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:security-group/sg-0bf0f53301e2d5437",
            "description": "Allow WEB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf0f53301e2d5437",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Secure WEB traffic Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow WEB traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "225908212644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow WEB Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c167763f1535afa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_subnet",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:subnet/subnet-034d5211bf7eb22aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-034d5211bf7eb22aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225908212644",
            "tags": {
              "Name": "Custom subnet"
            },
            "tags_all": {
              "Name": "Custom subnet"
            },
            "vpc_id": "vpc-0c167763f1535afa6"
          },
          "dependencies": [
            "module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computer.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:vpc/vpc-0c167763f1535afa6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c328ee780b2a2cd",
            "default_route_table_id": "rtb-074060f4246a8e3fc",
            "default_security_group_id": "sg-05bc763fb85305d01",
            "dhcp_options_id": "dopt-ff341285",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c167763f1535afa6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074060f4246a8e3fc",
            "owner_id": "225908212644",
            "tags": {
              "Name": "Custom VPC"
            },
            "tags_all": {
              "Name": "Custom VPC"
            }
          }
        }
      ]
    }
  ]
}